# Building-a-Debugger

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/libsdb/: bit.hpp  breakpoint_site.hpp  disassembler.hpp  dwarf.hpp  elf.hpp  error.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  syscalls.hpp  target.hpp  types.hpp  watchpoint.hpp
include/libsdb/detail/: registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  dwarf.cpp  elf.cpp  pipe.cpp  process.cpp  registers.cpp  syscalls.cpp  target.cpp  types.cpp  watchpoint.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello_sdb.cpp  memory.cpp  multi_cu_main.cpp  multi_cu_other.cpp  reg_read.s  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  sdb.cpp
